# mrml-ruby

./: .gitignore  .rubocop.yml  .travis.yml  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  mrml.gemspec
.github/workflows/: build.yml  cross-compile.yml
ext/: Rakefile
ext/mrml/: Cargo.toml  extconf.rb
ext/mrml/src/: lib.rs
lib/: mrml.rb
lib/mrml/: binding.rb  error.rb  native.rb  result.rb  template.rb  version.rb
src/: lib.rs
test/: mrml_test.rb  test_helper.rb
test/fixtures/: invalid.mjml  value.json
test/templates/: valid.mjml
