[package]
name = "mrml"
version = "0.1.0"
authors = ["Jonian Guveli <jonian@hardpixel.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
mrml = "1.2.10"
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "mrml"
crate-type = ["cdylib"]
