[package]
name = "mrml"
version = "0.1.0"
authors = ["Jonian Guveli <jonian@hardpixel.eu>"]
edition = "2018"

[dependencies]
mrml = "4.0"
magnus = "0.6"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[lib]
name = "mrml"
crate-type = ["cdylib"]
